--- a/AppMVC/AppMVC.csproj
+++ b/AppMVC/AppMVC.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\MVC.Domain\MVC.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
