servicio de imagenes

--- a/AppMVC/appsettings.json
+++ b/AppMVC/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PathFiles": {
+    "SizeFile": "3", //  3 MB
+    "PathImages": "Files/Images/Inventory",
+    "PathServer": "",
+    "AllowedExtensions": ".jpg,.png,.jpeg"
+  }
 }
