ajuste de estados.

--- a/AppMVC/appsettings.json
+++ b/AppMVC/appsettings.json
@@ -15,5 +15,9 @@
     "PathImages": "Files/Images/Inventory",
     "PathServer": "",
     "AllowedExtensions": ".jpg,.png,.jpeg"
+  },
+  "ConfigProduct": {
+    "StockLimit": "4",
+    "StockMinimum": "1"
   }
 }
