--- a/MVC.Data/MVC.Data.csproj
+++ b/MVC.Data/MVC.Data.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MVC.Common\MVC.Common.csproj" />
+  </ItemGroup>
+
 </Project>
