ajustes de maquetación de facturas

--- a/AppMVC/appsettings.json
+++ b/AppMVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStringSQLSERVER": "Server=JUANPRODRIGUEZ;Database=BdBodegas;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
+    "ConnectionStringSQLSERVER": "Server=JPRT\\SQLEXPRESS;Database=BdBodegas;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
   },
 
   "Logging": {
